[gd_scene load_steps=7 format=3 uid="uid://dm8q140i8u3ih"]

[ext_resource type="Script" path="res://Scripts/earworm.gd" id="1_f56b5"]
[ext_resource type="AudioStream" uid="uid://bv7cr1hd4c8pi" path="res://audio/earworm alert new.wav" id="3_ma71c"]
[ext_resource type="AudioStream" uid="uid://bbufjyr8hydks" path="res://audio/earworm_attack.wav" id="5_sqleo"]
[ext_resource type="PackedScene" uid="uid://dwvpdu2sqvlcu" path="res://Scenes/prefabs/enemies/earworm_0203172223_texture_obj/earworm new animation.fbx" id="5_xnrpd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rphe8"]
radius = 0.4

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8bs8h"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Earworm" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_f56b5")
turn_speed = 1.0
attack_radius = 1.0
attack_damage = 100.0
debug_visual_colors = true
animation_speed = 5.0
sound_cleanup_interval = 0.1
wander_interval = 3.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 2.5, 0)
shape = SubResource("CapsuleShape3D_rphe8")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="EarwormModel" parent="." instance=ExtResource("5_xnrpd")]
transform = Transform3D(1500, 0, 0, 0, 1500, 0, 0, 0, 1500, 0, 0, 0)

[node name="WalkSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
stream = ExtResource("3_ma71c")
volume_db = -10.0
max_distance = 10.0

[node name="AlertSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
max_distance = 15.0

[node name="AttackSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
stream = ExtResource("5_sqleo")
volume_db = 5.0
max_distance = 20.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_8bs8h")
